<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".LoginActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/title_login"
        android:textColor="@color/orange"
        android:textSize="34sp"
        android:textStyle="bold|italic"
        android:layout_marginBottom="8dp"/>

    <!-- Subtitle -->
    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:paddingHorizontal="46dp"
        android:text="@string/secondTitle_login"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <!-- Email or Username Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="18dp"
        app:boxBackgroundColor="@color/inputText"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:hint="Email or Username"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:boxBackgroundColor="@color/inputText"
        app:boxCornerRadiusTopStart="8dp"
        app:boxCornerRadiusTopEnd="8dp"
        app:boxCornerRadiusBottomStart="8dp"
        app:boxCornerRadiusBottomEnd="8dp"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawablePadding="15dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            tools:text="@tools:sample/lorem" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Forgot Password -->
    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_linkText"
        android:textColor="@color/green"
        android:textStyle="bold"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"/>

    <!-- Sign In Button -->
    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:backgroundTint="@color/btnColor"
        android:textColor="@android:color/white"
        android:paddingVertical="12dp"
        android:textSize="20sp"
        android:layout_marginBottom="16dp"/>

    <!-- Create New Account -->
    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/new_account"
        android:textColor="@android:color/black"/>



</LinearLayout>